Add sightings image gallery to PlantShare main page. (#490)

--- a/gobotany/plantshare/templates/manage_sightings.html
+++ b/gobotany/plantshare/templates/manage_sightings.html
@@ -48,7 +48,7 @@
                     <td>
                         {% if sighting.photo %}
                             <a href="{% url 'ps-sighting' sighting.id %}">
-                                <img src="{{ sighting.photo.thumb.url }}" alt="">
+                                <img src="{{ sighting.photo.thumb_cropped.url }}" alt="">
                             </a>
                         {% endif %}
                     </td>
