--- a/gobotany/static/sass/_mapping.scss
+++ b/gobotany/static/sass/_mapping.scss
@@ -18,8 +18,7 @@
 }
 #sightings-locator .info-window {
     img {
-        height: 75px;
-        width: 80px;
+        max-width: 80px;
     }
 }
 
