--- a/gobotany/plantshare/templates/sightings_by_year.html
+++ b/gobotany/plantshare/templates/sightings_by_year.html
@@ -32,7 +32,7 @@
                 {% if sighting.photo %}
                     <a class="photolink"
                         href="{% url 'ps-sighting' sighting.id %}">
-                        <img src="{{ sighting.photo.thumb.url }}" alt="">
+                        <img src="{{ sighting.photo.thumb_cropped.url }}" alt="">
                     </a>
                 {% endif %}
                 <a class="title"
