--- a/gobotany/plantshare/templates/sighting.html
+++ b/gobotany/plantshare/templates/sighting.html
@@ -1,4 +1,5 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
+{% load gobotany_tags %}
 {% load mapping_tags %}
 {% load plantshare_tags %}
 
@@ -15,8 +16,24 @@
     class="plantshare sighting"{% endblock %}
 
 {% block main_content %}
-<h1>Sighting: <i>{{ sighting.identification }}</i> at
-    {{ sighting.location|capfirst }}</h1>
+
+<div id="breadcrumb">
+    <ul>
+        <li class="label nogloss">You are here:</li>
+        <li class="nogloss"><a href="{% url 'ps-main' %}">PlantShare</a></li>
+        <li class="nogloss"><a href="{% url 'ps-sightings' %}">Sightings</a></li>
+        <li class="nogloss">
+        <a href="{% url 'ps-sightings-by-year' sighting.year %}">{{ sighting.year }}</a>
+        </li>
+        <li class="this-page nogloss">Sighting: 
+        {{ sighting.identification|italicize_if_scientific|safe }}
+        at {{ sighting.location|capfirst }}
+        </li>
+    </ul>
+</div>
+
+<h1>Sighting: {{ sighting.identification|italicize_if_scientific|safe }}
+    at {{ sighting.location|capfirst }}</h1>
 
 <p>Posted {{ sighting.created }} by {% user_display_name sighting.user %}</p>
 
