Change sighting breadcrumb label to primary nav. name.
Use the primary nav. name so the link corresponds to a recognizable section
in the main navigation.

--- a/gobotany/plantshare/templates/sighting.html
+++ b/gobotany/plantshare/templates/sighting.html
@@ -21,7 +21,7 @@
     <ul>
         <li class="label nogloss">You are here:</li>
         <li class="nogloss"><a href="{% url 'ps-main' %}">PlantShare</a></li>
-        <li class="nogloss"><a href="{% url 'ps-sightings' %}">Sightings</a></li>
+        <li class="nogloss"><a href="{% url 'ps-sightings' %}">Recent Sightings</a></li>
         <li class="nogloss">
         <a href="{% url 'ps-sightings-by-year' sighting.year %}">{{ sighting.year }}</a>
         </li>
