Remove 'coming soon' from Full Key heading in Help area.

--- a/gobotany/site/templates/gobotany/advanced.html
+++ b/gobotany/site/templates/gobotany/advanced.html
@@ -13,7 +13,7 @@
                     <div>
                         <div class="dk-landing-section">
                             <h2>Full Advanced Interactive Key to All
-                                3,500 New England Taxa (Coming Soon)</h2>
+                                3,500 New England Taxa</h2>
                             <section>
                                 <ul>
                                     <li>This key covers all 3,500 species,
