Replace some image buttons with text-based buttons. (#327)

--- a/gobotany/simplekey/templates/gobotany/_pilegroup_main_content.html
+++ b/gobotany/simplekey/templates/gobotany/_pilegroup_main_content.html
@@ -61,7 +61,8 @@
                     {% endwith %}
                 </p>
                 {% endif %}
-                <a class="plant-in-subgroup" href="{{ pile_url }}">My plant is in this subgroup</a>
+                <a class="orange-button caps" 
+                    href="{{ pile_url }}">My plant is in this subgroup</a>
             </div>
         </div>
         {% endif %}
