--- a/gobotany/simplekey/templates/gobotany/_simple_main_content.html
+++ b/gobotany/simplekey/templates/gobotany/_simple_main_content.html
@@ -48,7 +48,8 @@
                     {% endwith %}
                 </p>
                 {% endif %}
-                <a class="plant-in-group" href="{{ pilegroup_url }}">My plant is in this group</a>
+                <a class="orange-button caps"
+                    href="{{ pilegroup_url }}">My plant is in this group</a>
             </div>
         </div>
     {% endfor %}
