--- a/gobotany/site/templates/gobotany/_advanced_map_main_content.html
+++ b/gobotany/site/templates/gobotany/_advanced_map_main_content.html
@@ -52,8 +52,10 @@
                                     {% endfor %}
                                 </div>
                             </div>
-                            <a class="choose-btn"
-                                href="/{{ group.slug }}/{{ subgroup.slug }}/"></a>
+                            <p>
+                            <a class="orange-button caps"
+                                href="/{{ group.slug }}/{{ subgroup.slug }}/">Choose</a>
+                            </p>
                             <p class="list">
                                 <a href="/list/#subgroup={{ subgroup.friendly_title }}"
                                     >Species list</a>
