--- a/gobotany/site/templates/gobotany/help_dkey.html
+++ b/gobotany/site/templates/gobotany/help_dkey.html
@@ -37,7 +37,7 @@ Higher Vascular Plants of New England</i></a> (Haines, 2011).
 </p>
 
 <p>
-<a href="/dkey/" class="orange-button">Return to the Dichotomous Key</a>
+<a href="/dkey/" class="orange-button caps">Return to the Dichotomous Key</a>
 </p>
 
 {% endblock %}
