--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -162,6 +162,7 @@ body.taxa {
                 .help {
                     float: left;
                     line-height: 28px;
+                    margin-right: 12px;
                 }
                 .get-help-btn {
                     margin: 0 0 0 90px;
