--- a/gobotany/taxa/templates/gobotany/_species_main_content.html
+++ b/gobotany/taxa/templates/gobotany/_species_main_content.html
@@ -310,9 +310,9 @@
         {% endif %}
         
         <div class="section help">
-            <h2 class="left help">Need Help?</h2>
+            <h2 class="help">Need Help?</h2>
             <a href="{% url 'site-getting-started' %}"
-                class="get-help-btn left">Get Help</a>
+                class="orange-button caps">Get Help</a>
         </div>
     </div>
 
